--- a/ada/metaborg.yaml
+++ b/ada/metaborg.yaml
@@ -19,7 +19,7 @@ debug:
 language:
   sdf:
     pretty-print: ada
-    sdf2table: c
+    sdf2table: java
     placeholder:
       prefix: "$"
   stratego:
