--- a/ada.example/pom.xml
+++ b/ada.example/pom.xml
@@ -5,6 +5,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 >
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.metaborg</groupId>
   <artifactId>ada.example</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>spoofax-project</packaging>
@@ -12,9 +13,9 @@
   <parent>
     <groupId>org.metaborg</groupId>
     <artifactId>parent.language</artifactId>
-    <version>2.5.7</version>
+    <version>2.6.0-SNAPSHOT</version>
   </parent>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.metaborg</groupId>
@@ -23,7 +24,7 @@
       <type>spoofax-language</type>
     </dependency>
   </dependencies>
-  
+
   <repositories>
     <repository>
       <id>metaborg-release-repo</id>
@@ -46,7 +47,7 @@
       </snapshots>
     </repository>
   </repositories>
-  
+
   <pluginRepositories>
     <pluginRepository>
       <id>metaborg-release-repo</id>
