--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
->
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ada.all</artifactId>
   <groupId>org.metaborg</groupId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+
+  <parent>
+    <groupId>org.metaborg</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.6.0-SNAPSHOT</version>
+    <relativePath />
+  </parent>
 
   <modules>
     <module>ada</module>
@@ -29,12 +35,23 @@
     </repository>
     <repository>
       <id>metaborg-snapshot-repo</id>
-      <url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
+      <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
       <snapshots>
         <enabled>true</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>spoofax-eclipse-repo</id>
+      <url>http://artifacts.metaborg.org/content/unzip/releases-unzipped/org/metaborg/org.metaborg.spoofax.eclipse.updatesite/|rel-version|/org.metaborg.spoofax.eclipse.updatesite-|rel-version|-assembly.zip-unzip/</url>
+      <layout>p2</layout>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
       </snapshots>
     </repository>
   </repositories>
@@ -52,7 +69,7 @@
     </pluginRepository>
     <pluginRepository>
       <id>metaborg-snapshot-repo</id>
-      <url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
+      <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -61,4 +78,5 @@
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
+
 </project>
