Parse sixt chapter from learn.adacore.com and slight changes in names and subtype names

--- a/ada/metaborg.yaml
+++ b/ada/metaborg.yaml
@@ -19,7 +19,7 @@ debug:
 language:
   sdf:
     pretty-print: ada
-    sdf2table: dynamic
+    sdf2table: java
     placeholder:
       prefix: "$"
     jsglr-version: incremental
